--- a/css/flappy.css
+++ b/css/flappy.css
@@ -62,3 +62,16 @@
     z-index: 100;
 
 }
+
+.botao{
+    width: 10px;
+    margin: 15px;
+    position:fixed;
+    border: 15px;
+    
+}
+
+#btn{
+    height: 100px;
+    width: 1200px;
+}
